@@ -23,8 +23,10 @@ bzr-builddeb (2.7.10) UNRELEASED; urgency=low
   * Support --revision argument to merge-package. LP: #888590
   * By default, don't override the commit message from debian/changelog
     unless 'commit-message-from-changelog' is explicitly set to True. LP: #812749
+  * Support running dep3-patch against remote repositories, and with
+    open-ended revision ranges. LP: #893608
 
- -- Jelmer Vernooij <jelmer@debian.org>  Tue, 22 Nov 2011 12:04:47 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Sat, 26 Nov 2011 16:01:16 +0100
 
 bzr-builddeb (2.7.9) unstable; urgency=low
 
